Closed Bug 1209633 Opened 9 years ago Closed 9 years ago

nsMsgFolderDataSource.cpp(2456): warning C4804: '>': unsafe use of type 'bool' in operation

Categories

(MailNews Core :: Backend, defect)

defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 44.0

People

(Reporter: ssitter, Assigned: ssitter)

Details

Attachments

(1 file)

I want to see less warnings in my build output
mailnews/base/src/nsMsgFolderDataSource.cpp(2456): warning C4804: '>': unsafe use of type 'bool' in operation
Attachment #8667412 - Flags: review?(rkent)
Attachment #8667412 - Flags: review?(rkent) → review+
Keywords: checkin-needed
https://hg.mozilla.org/comm-central/rev/05d83afc65517cd40df0037421403eb97d91e498
Bug 1209633 - Fix warning C4804: '>': unsafe use of type 'bool' in operation. r=rkent
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 44.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: