Bug 1209633 - Fix warning C4804: '>': unsafe use of type 'bool' in operation. r=rkent